# bch-schnorr

./: Cargo.toml  README.md
crates/k256/: Cargo.toml
crates/k256/src/arithmetic/: affine.rs
crates/secp/: Cargo.toml
crates/secp/src/: lib.rs  points.rs
src/: lib.rs  main.rs
