[package]
name = "secp-schnorr"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
# k256 = { path = "../k256" }
rand = "0.8.5"
rfc6979 = "0.4.0"
# secp = { version = "0.3.0", default-features = false, features = ["k256"] }
secp = { path = "crates/secp", default-features = false, features = ["k256"] }
sha2 = "0.10.8"
